# cmakefiles

./: CMakeLists.txt
cmake/: ClangC++20Modules.cmake  FindAdd.cmake  GccC++20Modules.cmake  MSVCC++20Modules.cmake  x86_64-w64-mingw32-toolchain.cmake
